tests/xy_c_compile_resources/errors/handling3.xy
struct Error {
    code: Int,
}

func to(err: Error, :Bool) err.code != 0;

func errorProne(num: Int) -> Int | Error {
    if (num > 10_000) {
        error Error{num};
    }
    return num * 2;
}

func test(x: Int) -> Int {
    a := errorProne(x + 1);
    b := errorProne(x + 2);
    ||e: Error|| {
        printError(e);
    }
    c := a + errorProne(x + 3) + b;
    return c;
}